# F-TGMM

./: CHANGELOG  CMakeLists.txt  LICENSE.txt  README.md
src/: .directory  CMakeLists.txt  GaussianMixtureModel.cpp  GaussianMixtureModel.h  backgroundDetectionInterface.cpp  backgroundDetectionInterface.h  cellDivision.cpp  cellDivision.h  constants.h  hierarchicalSpatioTemporalLPtracking.cpp  mainTrackingGaussianMixtureModel.cpp  supportFunctionsMain.cpp  supportFunctionsMain.h  variationalInference.cpp  variationalInference.h
src/Cmake/: FindCPLEX.cmake  config-cuda-support.cmake  config-klb.cmake  config-mylib.cmake  config-parseconfigfile.cmake  config-pictools.cmake  git-tag.cmake  rpath.cmake
src/Utils/: MultinormalCDF.h  WishartCDF.cpp  parseConfigFile.cpp  parseConfigFile.h
src/UtilsCUDA/: GMEMcommonCUDA.h  GMEMupdateCUDA.cu  GMEMupdateCUDA.h  knnCuda_v1.cu  knnCuda_v1.h
src/UtilsCUDA/3DEllipticalHaarFeatures/: AnnotationEllipsoid.cpp  AnnotationEllipsoid.h  CMakeLists.txt  EllipticalHaarFeatures.cpp  EllipticalHaarFeatures.cu  EllipticalHaarFeatures.h  mainCellDivisionClassifier.cpp  mainCellDivisionClassifierWithTemporalWindow.cpp  mainTest.cpp
src/UtilsCUDA/3DEllipticalHaarFeatures/gentleBoost/: CMakeLists.txt  gentleBoost.cpp  gentleBoost.h  mainPrecisionRecallCurve.cxx  mainTrainSet.cxx
src/backgroundDetection/: CMakeLists.txt  backgroundClassifier.cpp  backgroundClassifier.h
src/cellDivisionDiscriminationWithTemporalWindow/: CMakeLists.txt  CellDivisionLookupTable.cpp  CellDivisionLookupTable.h  DivisionClassifierFactory.cpp  DivisionClassifierFactory.h  HowToTrainClassifier.txt  TGMMsupport.cpp  TGMMsupport.h  cellDivisionWithTemporalWindow.cpp  cellDivisionWithTemporalWindow.h  mainCellDivisionClassifierWithTemporalWindow.cxx  mkDirectory.cpp
src/cellDivisionDiscriminationWithTemporalWindow/matlabCode/: compareTGMMrunWithTrainingData.m  debugLoadBoxesInCDTW.m  fitMidplaneThr.m  generateCellDivisionDiscriminatorWithTemporalWindowClassifier.m  parseMatlabFitEnsembleToCppGentleBoostFormat.m  parseXmlAnnotationsFolder.m  trainCellDivisionDiscriminatorWithTemporalWindow.m  trainClassifier.fig  trainClassifier.m  trainClassifierRusboost.m  untitled_featureAnalysis.m  untitled_findNNfeatureSpace.m  untitled_intensityProfile.m  untitled_resaveAnnotations.m  untitled_saveBoxes.m  writeTrainingDataBinary.m
src/cellDivisionDiscriminationWithTemporalWindow/matlabCode/cellDivAnnotatorGUI/: cacheStackImages.m  cacheStackSupervoxels.m  cacheTGMMxmlSolution.m  debugCheckFxScore.m  deleteWholeTracksWithLabel.m  displayImagePlane.m  displayLineageTree.m  displayLineageTreeComparison.m  displayPartialLineageTree.m  displayTrajectory.m  drawEllipseOrthogonalPlanes.m  drawOrthogonalPlanes.m  drawProbabilityOrthogonalPlanes.m  drawSupervoxelsBlobSuperimposed.m  load_v3d_raw_img_file.m  localLineageDisplay.fig  localLineageDisplay.m  makeMoviePlot3D.m  median3elem.m  neighboringLineageVisualization.m  readTGMMxmlSolution.m  readTIFFstack.m  readTrainingDataBinary.m  saveAnnotationInMemory.m  saveAnnotationInMemorySupervoxels.m  showMarkerLineageTree.m  sortFrameByLineageLength.m  sortFrameElementsByBetaPrior.m  sortFrameElementsByCellDeath.m  sortFrameElementsByCellDivision.m  sortFrameElementsByCellDivisionWithColorIdx.m  sortFrameElementsByDisplacementWithRespectToParent.m  sortFrameElementsByEccentricity.m  sortFrameElementsByLineageBirth.m  sortFrameElementsByNumberOfSupervoxels.m  sortFrameElementsByProbCellDivision.m  sortFrameElementsByScore.m  sortFrameElementsBySize.m  sortFrameElementsBySizeChangeWithRespectToParent.m  sortFrameElementsByTrackBirth.m  (+9 more)
src/cellDivisionDiscriminationWithTemporalWindow/matlabCode/cellDivAnnotatorGUI/readTGMM_XMLoutput/readTGMM_XMLoutput/: GaussianMixtureModel.cpp  GaussianMixtureModel.h  README.md  compileMex.m  constants.cpp  constants.h  license.txt  parseMixtureGaussiansXml2MCMCBinary_MultiFrame.m  parseMixtureGaussiansXml2trackingMatrixCATMAIDformat.m  readListSupervoxelsFromBinaryFile.m  readSupervoxelFromBinary.m  readXMLmixtureGaussians.cpp  testFile.xml  (+2 more)
src/cellDivisionDiscriminationWithTemporalWindow/matlabCode/cellDivAnnotatorGUI/testData/: TGMM_configFile.txt  experimentLog_0000.txt
src/filesToCopyToExeFolder/: classifierCellDivision.txt  classifierCellDivisionWithTemporalWindow.txt
src/lib/mylib/: CMakeLists.txt  README
src/lib/mylib/scripts/: build.ps1  configure.ps1
src/lib/mylib/src/: CMakeLists.txt
src/lib/mylib/src/MY_FFT/: CMakeLists.txt
src/lib/mylib/src/MY_TIFF/: CMakeLists.txt
src/nucleiChSvWshedPBC/: CMakeLists.txt  autoThreshold.cpp  autoThreshold.h  bool.h  constants.h  graph.h  hierarchicalSegmentation.cpp  hierarchicalSegmentation.h  mainProcessStack.cpp  mainProcessStackBatchMulticore.cxx  mainSegmentationCentroids.cxx  mainTest.cpp  segmentationMask.h  set_union.c  set_union.h  threadsMylib.h  watershedPersistanceAgglomeration.cpp  watershedPersistanceAgglomeration.h
src/nucleiChSvWshedPBC/CUDAmedianFilter2D/: CMakeLists.txt  book.h  gaussianBlur2D.cu  gaussianBlur2D.h  mainTest.cpp  medianFilter2D.cu  medianFilter2D.h
src/nucleiChSvWshedPBC/MedianFilter2D/: CMakeLists.txt  gaussianBlur2D.cpp  gaussianBlur2D.h  medianFilter2D.cpp  medianFilter2D.h
src/temporalLogicalRules/: CMakeLists.txt  CellDivisionWithGPU3DHaar.cpp  CellDivisionWithGPU3DHaar.h  GaussianMixtureModel_Redux.cpp  GaussianMixtureModel_Redux.h  binaryTree.h  constants.hOldRemove  edgeTree.h  lineage.cpp  lineage.h  lineageHyperTree.cpp  lineageHyperTree.h  lineageWindowFeatures.cpp  lineageWindowFeatures.h  localGeometricDescriptor.cpp  localGeometricDescriptor.h  mainTest.cpp  nuclei.cpp  nuclei.h  supervoxel.cpp  supervoxel.h  temporalLogicalRules.cpp  temporalLogicalRules.h  trackletCalculation.cpp  trackletCalculation.h  utilsAmatf.h
src/temporalLogicalRules/knnCUDA/: knnCuda_v2.cu  knnCuda_v2.h
src/temporalLogicalRules/sparseHungarianAlgorithm/: CMakeLists.txt  mainTest.cxx  sparseHungarianAlgorithm.cpp  sparseHungarianAlgorithm.h
src/temporalLogicalRules/sparseHungarianAlgorithm/cmake/: FindCPLEX.cmake
(+95 files in other folders)
